<resources>
    <string name="app_name">SuitGame2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_back">Back</string>
    <string name="text_next">Next</string>
    <string name="text_your_name">Your Name</string>
    <string name="text_choose_your_opponent">Choose Your Opponent</string>
    <string name="text_user_vs_kucing">User vs Kucing</string>
    <string name="text_user_vs_robot_kucing">User vs Robot Kucing</string>
    <string name="text_game_result">Game Result</string>
    <string name="_textuser_won">User Won!!!</string>
    <string name="text_play_again">Play Again</string>
    <string name="text_back_to_menu">Back To Menu</string>
    <string name="text_user">User</string>
    <string name="text_kucing">Kucing</string>
    <string name="text_suit">SUIT</string>
    <string name="text_kucing2">KUCING</string>
    <string name="text_enter_your_name_below">Enter your name below</string>
    <string name="text_submit_name">Submit Name</string>
    <string name="text_lock">Lock</string>
</resources>