<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/bg_green_rounded"
    android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/text_game_result"
            android:textAlignment="center"
            android:textColor="@color/peach"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_bg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_bg2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_dialog" />

        <TextView
            android:id="@+id/tv_winner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:fontFamily="@font/montserrat_extrabold"
            android:text="@string/_textuser_won"
            android:textAlignment="center"
            android:textColor="@color/peach"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_bg" />

        <Button
            android:id="@+id/btn_play_again"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/orange2"
            android:elevation="30dp"
            android:fontFamily="@font/montserrat_semibold"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/text_play_again"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_bg" />

        <Button
            android:id="@+id/btn_back_to_menu"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:fontFamily="@font/montserrat_semibold"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/text_back_to_menu"
            android:textColor="@color/orange"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btn_play_again"
            app:layout_constraintStart_toStartOf="@id/btn_play_again"
            app:layout_constraintTop_toBottomOf="@id/btn_play_again" />

</androidx.constraintlayout.widget.ConstraintLayout>