<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".ui.main.GameActivity">

    <ImageView
        android:id="@+id/iv_logo_title"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_logo_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/text_user"
        android:textAlignment="center"
        android:textColor="@color/peach"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/iv_logo_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_title" />

    <TextView
        android:id="@+id/tv_player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_extrabold"
        android:text="@string/text_kucing"
        android:textAlignment="center"
        android:textColor="@color/peach"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_logo_title"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_title" />


    <LinearLayout
        android:id="@+id/ll_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user">

        <ImageView
            android:id="@+id/iv_left_rock"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_left_rock" />

        <ImageView
            android:id="@+id/iv_left_paper"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_left_paper" />

        <ImageView
            android:id="@+id/iv_left_scissor"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_left_scissor" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_select_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/orange2"
        android:elevation="20dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/text_lock"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/ll_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_user" />

    <Button
        android:id="@+id/btn_select_player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/orange2"
        android:elevation="20dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/text_lock"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/ll_player2"
        app:layout_constraintStart_toStartOf="@id/ll_player2"
        app:layout_constraintTop_toBottomOf="@id/ll_player2" />

    <LinearLayout
        android:id="@+id/ll_player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_player2">

        <ImageView
            android:id="@+id/iv_right_rock"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right_rock" />

        <ImageView
            android:id="@+id/iv_right_paper"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right_paper" />

        <ImageView
            android:id="@+id/iv_right_scissor"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right_scissor" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_versus"
        app:layout_constraintBottom_toBottomOf="@id/ll_user"
        app:layout_constraintEnd_toStartOf="@id/ll_player2"
        app:layout_constraintStart_toEndOf="@id/ll_user"
        app:layout_constraintTop_toTopOf="@id/ll_user" />

    <ImageView
        android:id="@+id/iv_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:src="@drawable/ic_refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_select_player2" />


</androidx.constraintlayout.widget.ConstraintLayout>